xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__status_line_goal_active_token_budget_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰───────────────────────────────────────────────────────────────────────gpt-5.4╯"
"  gpt-5.4                                            Pursuing goal (40K / 50K)  "
