xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰────────────────────────────────────────────────────────────────gpt-5.2─medium╯"
"  gpt-5.2 medium                                Plan mode (shift+tab to cycle)  "
