xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__status_line_setup_popup_hardcoded_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select items, or enable Custom command; tab edits it.

  Type to search
  >
› [x] Use theme colors      Apply colors from the active /theme
  [ ] Custom command        ~/.claude/statusline.sh (tab to edit)
  ───────────────────────
  [x] project-name          Project name (omitted when unavailable)
  [x] git-branch            Current Git branch (omitted when unavailable)
  [x] thread-title          Current thread title, or thread identifier when unnamed
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level

  my-project · feat/awesome-feature · thread title
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
