xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select items, or enable Custom command; tab edits it.

  Type to search
  >
› [x] Use theme colors      Apply colors from the active /theme
  [ ] Custom command        ~/.claude/statusline.sh (tab to edit)
  ───────────────────────
  [x] monthly-limit         Remaining usage on the monthly usage limit (omitted when unavailable)
  [x] weekly-limit          Remaining usage on the weekly usage limit (omitted when unavailable)
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
  [ ] reasoning             Current reasoning level

  monthly 65% left · weekly 50% left
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
